addee navbar items

--- a/main.html
+++ b/main.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  
-  <title>E-Commerce Team Project</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+
+    <title>E-Commerce Team Project</title>
+
 <body>
-  <header class="header">
-		<div class="title"></div>
-		<div class="nav-bar">
-      
-    </div>
-	</header>
+    <header class="header">
+        <div class="title"></div>
+        <div class="nav-bar">
+            <div class="nav-item">Home</div>
+            <div class="nav-item">Necklaces</div>
+            <div class="nav-item">Rings</div>
+            <div class="nav-item">Earrings</div>
+            <div class="nav-item">Gem Stones</div>
+            <!-- <div class="nav-item"></div> -->
+            <div class="nav-item">About Us</div>
+        </div>
+        </div>
+    </header>
 
-	<div class="content">Write your codes here</div>
+    <div class="content">Write your codes here</div>
 
-	<footer class="footer">
-		<div class="slogan">Slogan</div>
-		<div class="socialmedia">Social Media</div>
-		<div class="newsletter">Newsletter</div>
-	</footer>
+    <footer class="footer">
+        <div class="slogan">Slogan</div>
+        <div class="socialmedia">Social Media</div>
+        <div class="newsletter">Newsletter</div>
+    </footer>
 </body>
