edited font in the nav bar

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
 
     <title>E-Commerce Team Project</title>
 
