--- a/main.html
+++ b/main.html
@@ -10,7 +10,21 @@
 
 <body>
     <header class="header">
-        <div class="title"></div>
+        <div class="title">
+            <div class="logo">
+                <img src="your-logo-url.jpg" alt="Logo">
+            </div>
+            <div class="shop-name">
+                Jewellery
+            </div>
+       </div>
+        <div class="header-icons">
+            <img class="icons" src="your-logo-url.jpg" alt="Logo">
+            <img class="icons" src="your-logo-url.jpg" alt="Logo">
+            <img class="icons" src="your-logo-url.jpg" alt="Logo">
+            <img class="icons" src="your-logo-url.jpg" alt="Logo">
+            
+        </div>
         <div class="nav-bar">
             <div class="nav-item">Home</div>
             <div class="nav-item">Necklaces</div>
