--- a/main.html
+++ b/main.html
@@ -11,18 +11,18 @@
 <body>
     <header class="header">
         <div class="title">
-            <div class="logo">
-                <img src="your-logo-url.jpg" alt="Logo">
+            <div class="logo-div">
+                <img class="logo" src="./images/logo.png" alt="Logo">
             </div>
             <div class="shop-name">
                 Jewellery
             </div>
        </div>
         <div class="header-icons">
-            <img class="icons" src="your-logo-url.jpg" alt="Logo">
-            <img class="icons" src="your-logo-url.jpg" alt="Logo">
-            <img class="icons" src="your-logo-url.jpg" alt="Logo">
-            <img class="icons" src="your-logo-url.jpg" alt="Logo">
+            <img class="icons" src="./images/search.png" alt="search">
+            <img class="icons" src="./images/user.png" alt="userprofile">
+            <img class="icons" src="./images/heart.jpg" alt="wishlist">
+            <img class="icons" src="./images/bag.png" alt="shoppingbag">
             
         </div>
         <div class="nav-bar">
