edited connect with us in footer

--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
             <div class="shop-name">
                 Jewellery
             </div>
-       </div>
+        </div>
         <div class="header-icons">
             <img class="icons" src="./images/search.png" alt="search">
             <img class="icons" src="./images/user.png" alt="userprofile">
             <img class="icons" src="./images/heart.jpg" alt="wishlist">
             <img class="icons" src="./images/bag.png" alt="shoppingbag">
-            
+
         </div>
         <div class="nav-bar">
             <div class="nav-item">Home</div>
@@ -41,7 +41,26 @@
 
     <footer class="footer">
         <div class="slogan">Slogan</div>
-        <div class="socialmedia">Social Media</div>
+        <div class="socialmedia">
+            <div>Connect With Us</div><br>
+            <div class="socialmedia-item">
+                <div><img class="icons" src="./images/insta.png" alt="insta"></div>
+                <div class="socialmedia-name">Jewellery</div>
+            </div>
+            <div class="socialmedia-item">
+                <div><img class="icons" src="./images/fb2.png" alt="fb"></div>
+                <div class="socialmedia-name">Jewellery</div>
+            </div>
+            <div class="socialmedia-item">
+                <div><img class="icons" src="./images/mail.png" alt="mail"></div>
+                <div class="socialmedia-name">jewellery@jewellery.com</div>
+            </div>
+            <div class="socialmedia-item">
+                <div><img class="icons" src="./images/telephone-62.png" alt="telephone"></div>
+                <div class="socialmedia-name">+961 3 123456</div>
+            </div>
+
+        </div>
         <div class="newsletter">Newsletter</div>
     </footer>
 </body>
