--- a/main.html
+++ b/main.html
@@ -61,6 +61,19 @@
             </div>
 
         </div>
-        <div class="newsletter">Newsletter</div>
+        <div class="newsletter">
+            <div>Newsletter</div>
+            <div class="form">
+                <form>
+                    <input type="email" id="email-input" name="email" placeholder="Enter your email address">
+                    <button class="subscribe-button" type="submit">Subscribe</button>
+                </form>
+            </div>
+            <div class="space"></div>
+            <div><img style="height: 40px; width: auto;" src="./images/payment.png" alt="payment"></div>
+
+        </div>
+
+        </div>
     </footer>
 </body>
