--- a/signup-menu.html
+++ b/signup-menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./styles/sigup-styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
 
     <title>E-Commerce Team Project</title>
@@ -25,17 +25,16 @@
             <img class="icons" src="./images/bag.png" alt="shoppingbag">
 
         </div>
+        </header>
         <div class="nav-bar">
             <div class="nav-item">Home</div>
             <div class="nav-item">Necklaces</div>
             <div class="nav-item">Rings</div>
             <div class="nav-item">Earrings</div>
             <div class="nav-item">Gem Stones</div>
-            <!-- <div class="nav-item"></div> -->
             <div class="nav-item">About Us</div>
         </div>
-        </div>
-    </header>
+    
 
     <div class="content">Write your codes here</div>
 
