--- a/main.html
+++ b/main.html
@@ -36,7 +36,11 @@
         </div>
     
 
-    <div class="content">Write your codes here</div>
+    <div class="content">
+        <div class="video-container">
+            <video src="./videos/diamonds-3126.mp4" controls autoplay muted loop></video>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="slogan">Slogan</div>
