--- a/necklaces.html
+++ b/necklaces.html
@@ -37,8 +37,10 @@
     
 
     <h1 class="necklaces_title">NECKLACES</h1>
-    <img class="img_title" src="images/necklaces_title.jpg">
-    <div class="container">
+    <!-- <img class="img_title" src="images/necklaces_title.jpg"> -->
+        <div class=".video-container">
+        <video src="./videos/neck2.mp4" controls autoplay muted loop></video>
+    </div>
         <div class=" products product1">
             <div>
                 <img class="products_images product_image1" src="images/necklace1.png">
