added photos in main page

--- a/main.html
+++ b/main.html
@@ -40,11 +40,12 @@
         <div class="video-container">
             <video src="./videos/diamonds-3126.mp4" controls autoplay muted loop></video>
         </div>
-
+        <div class="photo-collage1"><img class="collage1" src="./images/1665120556.jpg" alt="jewels"></div>
         <div class="photo-collage1">
             <div><img class="collage1" src="./images/earrings.jpg" alt="earrings"></div>
             <div><img class="collage1" src="./images/necklace1.jpg" alt="necklace"></div>
         </div>
+        
 
     </div>
 
