added categories photos

--- a/main.html
+++ b/main.html
@@ -45,7 +45,13 @@
             <div><img class="collage1" src="./images/earrings.jpg" alt="earrings"></div>
             <div><img class="collage1" src="./images/necklace1.jpg" alt="necklace"></div>
         </div>
-        
+        <div class="categories">
+            <div><img class="img-cat" src="./images/cat-neck.jpg" alt="necklace"></div>
+            <div><img class="img-cat" src="./images/cat-brace.jpg" alt="bracelet"></div>
+            <div><img class="img-cat" src="./images/cat-ear.jpg" alt="earrings"></div>
+            <div><img class="img-cat" src="./images/cat-ring.jpg" alt="ring"></div>
+            
+        </div>
 
     </div>
 
