added responsiveness to category imgs

--- a/main.html
+++ b/main.html
@@ -25,16 +25,16 @@
             <img class="icons" src="./images/bag.png" alt="shoppingbag">
 
         </div>
-        </header>
-        <div class="nav-bar">
-            <div class="nav-item">Home</div>
-            <div class="nav-item">Necklaces</div>
-            <div class="nav-item">Rings</div>
-            <div class="nav-item">Earrings</div>
-            <div class="nav-item">Gem Stones</div>
-            <div class="nav-item">About Us</div>
-        </div>
-    
+    </header>
+    <div class="nav-bar">
+        <div class="nav-item">Home</div>
+        <div class="nav-item">Necklaces</div>
+        <div class="nav-item">Rings</div>
+        <div class="nav-item">Earrings</div>
+        <div class="nav-item">Gem Stones</div>
+        <div class="nav-item">About Us</div>
+    </div>
+
 
     <div class="content">
         <div class="video-container">
@@ -45,12 +45,14 @@
             <div><img class="collage1" src="./images/earrings.jpg" alt="earrings"></div>
             <div><img class="collage1" src="./images/necklace1.jpg" alt="necklace"></div>
         </div>
-        <div class="categories">
-            <div><img class="img-cat" src="./images/cat-neck.jpg" alt="necklace"></div>
-            <div><img class="img-cat" src="./images/cat-brace.jpg" alt="bracelet"></div>
-            <div><img class="img-cat" src="./images/cat-ear.jpg" alt="earrings"></div>
-            <div><img class="img-cat" src="./images/cat-ring.jpg" alt="ring"></div>
-            
+        <div class="shop-by-cat">
+            <div class="shop-by-cat-title">Shop By Category</div>
+            <div class="categories">
+                <div><img class="img-cat" src="./images/cat-neck.jpg" alt="necklace"></div>
+                <div><img class="img-cat" src="./images/cat-brace.jpg" alt="bracelet"></div>
+                <div><img class="img-cat" src="./images/cat-ear.jpg" alt="earrings"></div>
+                <div><img class="img-cat" src="./images/cat-ring.jpg" alt="ring"></div>
+            </div>
         </div>
 
     </div>
