--- a/edit-profile.html
+++ b/edit-profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles/signup-style.css">
+    <link rel="stylesheet" type="text/css" href="styles/edit-profile.css">
     <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
 
     <title>E-Commerce Team Project</title>
