--- a/earrings.html
+++ b/earrings.html
@@ -39,7 +39,7 @@
     <h1 class="necklaces_title">EARRINGS</h1>
     <!-- <img class="img_title" src="images/necklaces_title.jpg"> -->
         <div class=".video-container">
-        <video src="./videos/rings.mp4" controls autoplay muted loop></video>
+        <video src="./videos/earrings.mp4" controls autoplay muted loop></video>
     </div>
         <div class=" products product1">
             <div>
