fixed the alignment of login

--- a/login-menu.html
+++ b/login-menu.html
@@ -60,7 +60,7 @@
                 </div>
            
                 <div class="input-wrap">
-                    <button type="submit"  id="save-changes-button">Save Changes</button>
+                    <button type="submit"  id="save-changes-button">login</button>
                   
                 </div>
             </div>
