--- a/earrings.html
+++ b/earrings.html
@@ -31,7 +31,7 @@
             <div class="nav-item">Necklaces</div>
             <div class="nav-item">Rings</div>
             <div class="nav-item">Earrings</div>
-            <div class="nav-item">Gem Stones</div>
+            <div class="nav-item">BRACELETS</div>
             <div class="nav-item">About Us</div>
         </div>
     
