added js animation

--- a/main.html
+++ b/main.html
@@ -46,6 +46,7 @@
             <div><img class="collage1" src="./images/necklace1.jpg" alt="necklace"></div>
         </div>
         <div class="shop-by-cat">
+            
             <div class="shop-by-cat-title">Shop By Category</div>
             <div class="categories">
                 <div><img class="img-cat" src="./images/cat-neck.jpg" alt="necklace"></div>
@@ -53,10 +54,11 @@
                 <div><img class="img-cat" src="./images/cat-ear.jpg" alt="earrings"></div>
                 <div><img class="img-cat" src="./images/cat-ring.jpg" alt="ring"></div>
             </div>
+            <div id="quote"></div>
         </div>
 
     </div>
-
+    <script src="main.js"></script>
     <footer class="footer">
         <div class="slogan">Slogan</div>
         <div class="socialmedia">
