--- a/bracelets.html
+++ b/bracelets.html
@@ -36,7 +36,7 @@
         </div>
     
 
-    <h1 class="necklaces_title">BRACELETS</h1>
+    <h1 class="bracelets_title">BRACELETS</h1>
     <!-- <img class="img_title" src="images/necklaces_title.jpg"> -->
         <div class=".video-container">
         <video src="./videos/bracelets.mp4" controls autoplay muted loop></video>
