--- a/earrings.html
+++ b/earrings.html
@@ -36,7 +36,7 @@
         </div>
     
 
-    <h1 class="necklaces_title">EARRINGS</h1>
+    <h1 class="earrings_title">EARRINGS</h1>
     <!-- <img class="img_title" src="images/necklaces_title.jpg"> -->
         <div class=".video-container">
         <video src="./videos/earrings.mp4" controls autoplay muted loop></video>
