--- a/ring.html
+++ b/ring.html
@@ -36,7 +36,7 @@
         </div>
     
 
-    <h1 class="necklaces_title">RINGS</h1>
+    <h1 class="rings_title">RINGS</h1>
     <!-- <img class="img_title" src="images/necklaces_title.jpg"> -->
         <div class=".video-container">
         <video src="./videos/rings.mp4" controls autoplay muted loop></video>
