added flipping cards

--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
             <div><img class="collage1" src="./images/necklace1.jpg" alt="necklace"></div>
         </div>
         <div class="shop-by-cat">
-            
+
             <div class="shop-by-cat-title">Shop By Category</div>
             <div class="categories">
                 <div><img class="img-cat" src="./images/cat-neck.jpg" alt="necklace"></div>
@@ -55,7 +55,30 @@
                 <div><img class="img-cat" src="./images/cat-ring.jpg" alt="ring"></div>
             </div>
             <div id="quote"></div>
+            <div class="photo-and-desc">
+                <div class="card">
+                    <div class="front"><img class="collage2" src="./images/ringcolor.jpg" alt="earring"></div>
+                    <div class="back">
+                        <p>Earring Description</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front"><img class="collage2" src="./images/ringcolor.jpg" alt="earring"></div>
+                    <div class="back">
+                        <p>Earring Description</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front"><img class="collage2" src="./images/ringcolor.jpg" alt="earring"></div>
+                    <div class="back">
+                        <p>Earring Description</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
+    </div>
 
     </div>
     <script src="main.js"></script>
