--- a/main.html
+++ b/main.html
@@ -61,14 +61,10 @@
                     <div class="back">
                         <p>
                         <ul class="product_description_list"><b>Colored Stones Bracelet</b>
-                            <li>Collection: Leaves</li>
-                            <li>Gender: For Her</li>
                             <li>Metal: Yellow Gold</li>
                             <li>Gemstone: Precious Colors</li>
                             <li>Non-Paved</li>
                             <li>Type of Bracelets: Rigid</li>
-                            <li>Leaves Bracelet, 18kt yellow gold, set with marquise, round, pear and oval-cuts
-                                red, green and blue stones</li>
                             <li>Gold Weight : 11.67 g</li>
                             <li> Colored Stones: 0.27ct</li>
                         </ul>
@@ -79,41 +75,35 @@
                     <div class="front"><img class="collage2" src="./images/r2.jpg" alt="jewellery"></div>
                     <div class="back">
                         <p>
-                            <ul class="product_description_list"><b>Colored Stones Bracelet</b>
-                                <li>Collection: Leaves</li>
-                                <li>Gender: For Her</li>
-                                <li>Metal: Yellow Gold</li>
-                                <li>Gemstone: Precious Colors</li>
-                                <li>Non-Paved</li>
-                                <li>Type of Bracelets: Rigid</li>
-                                <li>Leaves Bracelet, 18kt yellow gold, set with marquise, round, pear and oval-cuts
-                                    red, green and blue stones</li>
-                                <li>Gold Weight : 11.67 g</li>
-                                <li> Colored Stones: 0.27ct</li>
-                            </ul>
-                            </p>
+                        <ul class="product_description_list"><b>Colored Stones Bracelet</b>
+                            <li>Metal: Yellow Gold</li>
+                            <li>Gemstone: Precious Colors</li>
+                            <li>Non-Paved</li>
+                            <li>Type of Bracelets: Rigid</li>
+                            <li>Gold Weight : 11.67 g</li>
+                            <li> Colored Stones: 0.27ct</li>
+                        </ul>
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="front"><img class="collage2" src="./images/r3.jpg" alt="jewellery"></div>
                     <div class="back">
                         <p>
-                            <ul class="product_description_list"><b>Colored Stones Bracelet</b>
-                                <li>Collection: Leaves</li>
-                                <li>Gender: For Her</li>
-                                <li>Metal: Yellow Gold</li>
-                                <li>Gemstone: Precious Colors</li>
-                                <li>Non-Paved</li>
-                                <li>Type of Bracelets: Rigid</li>
-                                <li>Leaves Bracelet, 18kt yellow gold, set with marquise, round, pear and oval-cuts
-                                    red, green and blue stones</li>
-                                <li>Gold Weight : 11.67 g</li>
-                                <li> Colored Stones: 0.27ct</li>
-                            </ul>
-                            </p>
+                        <ul class="product_description_list"><b>Colored Stones Bracelet</b>
+                            <li>Metal: Yellow Gold</li>
+                            <li>Gemstone: Precious Colors</li>
+                            <li>Non-Paved</li>
+                            <li>Type of Bracelets: Rigid</li>
+                            <li>Gold Weight : 11.67 g</li>
+                            <li> Colored Stones: 0.27ct</li>
+                        </ul>
+                        </p>
                     </div>
                 </div>
             </div>
+            <div class="shop-by-cat-title">FEEDBACK | POSITIVITY | SHARING</div>
+            
 
         </div>
 
