--- a/main.html
+++ b/main.html
@@ -103,7 +103,21 @@
                 </div>
             </div>
             <div class="shop-by-cat-title">FEEDBACK | POSITIVITY | SHARING</div>
-            
+            <div class="feedback">
+                <div class="feedback-box">
+                    <div><img class="quotations" src="./images/quotations2.png" alt="quot"></div>
+                    <div><p class="review">"The quality of the jewelry is exceptional! It has held up well over time and still looks as stunning as the day I received it. I receive compliments every time I wear it!"</p></div>
+                </div>
+                <div class="feedback-box">
+                    <div><img class="quotations" src="./images/quotations2.png" alt="quot"></div>
+                    <div><p class="review">""I highly recommend this jewelry brand. The unique designs and high-quality materials make for truly special pieces. I always feel like a million bucks when I wear their jewelry!""</p></div>
+                </div>
+                <div class="feedback-box">
+                    <div><img class="quotations" src="./images/quotations2.png" alt="quot"></div>
+                    <div><p class="review">""The attention to detail is impeccable. The intricacy of the design and the high-quality stones used really make this piece stand out. I feel like I'm wearing a piece of art!""</p></div>
+                </div>
+                
+            </div>
 
         </div>
 
