--- a/main.html
+++ b/main.html
@@ -27,11 +27,11 @@
         </div>
     </header>
     <div class="nav-bar">
-        <div class="nav-item">Home</div>
-        <div class="nav-item">Necklaces</div>
-        <div class="nav-item">Rings</div>
-        <div class="nav-item">Earrings</div>
-        <div class="nav-item">BRACELETS</div>
+        <div class="nav-item" onclick="window.location.href = 'main.html';">Home</div>
+        <div class="nav-item" onclick="window.location.href = 'necklaces.html';">Necklaces</div>
+        <div class="nav-item" onclick="window.location.href = 'ring.html';">Rings</div>
+        <div class="nav-item" onclick="window.location.href = 'nearrings.html';">Earrings</div>
+        <div class="nav-item" onclick="window.location.href = 'bracelets.html';">BRACELETS</div>
         <div class="nav-item">About Us</div>
     </div>
 
