--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
         <div class="nav-item" onclick="window.location.href = 'main.html';">Home</div>
         <div class="nav-item" onclick="window.location.href = 'necklaces.html';">Necklaces</div>
         <div class="nav-item" onclick="window.location.href = 'ring.html';">Rings</div>
-        <div class="nav-item" onclick="window.location.href = 'nearrings.html';">Earrings</div>
+        <div class="nav-item" onclick="window.location.href = 'earrings.html';">Earrings</div>
         <div class="nav-item" onclick="window.location.href = 'bracelets.html';">BRACELETS</div>
         <div class="nav-item">About Us</div>
     </div>
