added script tp sign up

--- a/signup-menu.html
+++ b/signup-menu.html
@@ -76,7 +76,7 @@
                 
                 <div class="input-wrap">
                     <button type="submit" id="submit-button">Submit</button>
-                    <p class="terms">Already have an account? <span>Login</span></p>
+                    <p class="terms">Already have an account? <a href="login-menu.html"><span>Login</span></a></p>
                 </div>
             </div>
            
