--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
         <div class="nav-item" onclick="window.location.href = 'ring.html';">Rings</div>
         <div class="nav-item" onclick="window.location.href = 'earrings.html';">Earrings</div>
         <div class="nav-item" onclick="window.location.href = 'bracelets.html';">BRACELETS</div>
-        <div class="nav-item">About Us</div>
+        <div class="nav-item onclick="window.location.href = 'about-us.html';"">About Us</div>
     </div>
 
 
