linked the signup menu in login

--- a/login-menu.html
+++ b/login-menu.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="input-wrap">
                    
-                    <p class="terms">start your journey with us now! <span>Signup</span></p>
+                    <p class="terms">start your journey with us now! <a href="signup-menu.html"><span>Signup</span></a></p>
                 </div>
             </div>
            
