--- a/edit-profile.html
+++ b/edit-profile.html
@@ -61,10 +61,10 @@
                 <div class="input-wrap">
                     <input type="email" id="edit-email" placeholder="Edit Email">
                 </div>
-                <div class="input-wrap">
+                <!-- <div class="input-wrap">
                     <input type="date" id="edit-b-date" placeholder="Edit Date Of Birth">
                 </div>
-           
+            -->
                 <div class="input-wrap">
                     <button type="submit"  id="save-changes-button">Save Changes</button>
                   
