--- a/signup-menu.html
+++ b/signup-menu.html
@@ -62,9 +62,9 @@
                 <div class="input-wrap">
                     <input type="email" id="email" placeholder="Email">
                 </div>
-                <div class="input-wrap">
+                <!-- <div class="input-wrap">
                     <input type="date" id="b-date" placeholder="Date Of Birth">
-                </div>
+                </div> -->
                 <div class="input-wrap">
                     <input type="password" id="password" placeholder="Password">
                 </div>
