created cartbag page

--- a/cartbag.html
+++ b/cartbag.html
@@ -35,10 +35,15 @@
             <div class="nav-item">About Us</div>
         </div>
         <h1 class="cart_title">SHOPPING CART</h1>
-        <div class="cart_items">
-            <p >Your cart is empty.</p>
+        <p class="total_price">Total=<span id="total">0</span>$</p>
+        <div class="cart_items" id="cart">
+            <p class="empty_cart">Your cart is empty.</p>
             <button type="button" class="browse_button">Browse Store</button>
 
+        </div>
+        <div style="display: none;">
+            <div id="cart_product1"></div>
+            <div id="cart_product2"></div>
         </div>
     
 
@@ -79,4 +84,5 @@
     
             </div>
         </footer>
+        <script src="javaScript/cartbag.js"></script>
     </body>
