--- a/frontend/main.html
+++ b/frontend/main.html
@@ -27,8 +27,8 @@
         </div>
     </header>
     <div class="nav-bar">
-        <div class="nav-item" onclick="window.location.href = 'main.html';">Home</div>
-        <div class="nav-item" onclick="window.location.href = 'necklaces.html';">Necklaces</div>
+        <div class="nav-item" onclick="window.location.href = './frontend/main.html';">Home</div>
+        <div class="nav-item" onclick="window.location.href = './frontend/necklaces.html';">Necklaces</div>
         <div class="nav-item" onclick="window.location.href = 'ring.html';">Rings</div>
         <div class="nav-item" onclick="window.location.href = 'earrings.html';">Earrings</div>
         <div class="nav-item" onclick="window.location.href = 'bracelets.html';">BRACELETS</div>
