--- a/frontend/about-us.html
+++ b/frontend/about-us.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./styles/about-us.css">
+    <link rel="stylesheet" type="text/css" href="../styles/about-us.css">
     <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
 
     <title>E-Commerce Team Project</title>
@@ -12,17 +12,17 @@
     <header class="header">
         <div class="title">
             <div class="logo-div">
-                <img class="logo" src="./images/logo.png" alt="Logo">
+                <img class="logo" src="../images/logo.png" alt="Logo">
             </div>
             <div class="shop-name">
                 Jewellery
             </div>
         </div>
         <div class="header-icons">
-            <img class="icons" src="./images/search.png" alt="search">
-            <img class="icons" src="./images/user.png" alt="userprofile">
-            <img class="icons" src="./images/heart.jpg" alt="wishlist">
-            <img class="icons" src="./images/bag.png" alt="shoppingbag">
+            <img class="icons" src="../images/search.png" alt="search">
+            <img class="icons" src="../images/user.png" alt="userprofile">
+            <img class="icons" src="../images/heart.jpg" alt="wishlist">
+            <img class="icons" src="../images/bag.png" alt="shoppingbag">
 
         </div>
     </header>
@@ -48,28 +48,28 @@
 		</main>
 		<footer>
 			<p><b>&copy; 2023 Our Jewelry Shop</b></p>
-		</footer
+        </footer>
     </div>
 
-    <script src="main.js"></script>
+    <script src="../javaScript/main.js"></script>
     <footer class="footer">
         <div class="slogan">Slogan</div>
         <div class="socialmedia">
             <div>Connect With Us</div><br>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/insta.png" alt="insta"></div>
+                <div><img class="icons" src="../images/insta.png" alt="insta"></div>
                 <div class="socialmedia-name">Jewellery</div>
             </div>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/fb2.png" alt="fb"></div>
+                <div><img class="icons" src="../images/fb2.png" alt="fb"></div>
                 <div class="socialmedia-name">Jewellery</div>
             </div>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/mail.png" alt="mail"></div>
+                <div><img class="icons" src="../images/mail.png" alt="mail"></div>
                 <div class="socialmedia-name">jewellery@jewellery.com</div>
             </div>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/telephone-62.png" alt="telephone"></div>
+                <div><img class="icons" src="../images/telephone-62.png" alt="telephone"></div>
                 <div class="socialmedia-name">+961 3 123456</div>
             </div>
 
@@ -83,7 +83,7 @@
                 </form>
             </div>
             <div class="space"></div>
-            <div><img style="height: 40px; width: auto;" src="./images/payment.png" alt="payment"></div>
+            <div><img style="height: 40px; width: auto;" src="../images/payment.png" alt="payment"></div>
 
         </div>
 
