--- a/frontend/bracelets.html
+++ b/frontend/bracelets.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./styles/bracelets.css">
+    <link rel="stylesheet" type="text/css" href="../styles/bracelets.css">
     <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
 
     <title>E-Commerce Team Project</title>
@@ -12,17 +12,17 @@
     <header class="header">
         <div class="title">
             <div class="logo-div">
-                <img class="logo" src="./images/logo.png" alt="Logo">
+                <img class="logo" src="../images/logo.png" alt="Logo">
             </div>
             <div class="shop-name">
                 Jewellery
             </div>
         </div>
         <div class="header-icons">
-            <img class="icons" src="./images/search.png" alt="search">
-            <img class="icons" src="./images/user.png" alt="userprofile">
-            <img class="icons" src="./images/heart.jpg" alt="wishlist">
-            <img class="icons" src="./images/bag.png" alt="shoppingbag">
+            <img class="icons" src="../images/search.png" alt="search">
+            <img class="icons" src="../images/user.png" alt="userprofile">
+            <img class="icons" src="../images/heart.jpg" alt="wishlist">
+            <img class="icons" src="../images/bag.png" alt="shoppingbag">
 
         </div>
     </header>
@@ -39,11 +39,11 @@
     <h1 class="bracelets_title">BRACELETS</h1>
     <!-- <img class="img_title" src="images/necklaces_title.jpg"> -->
     <div class=".video-container">
-        <video src="./videos/bracelets.mp4" controls autoplay muted loop></video>
+        <video src="../videos/bracelets.mp4" controls autoplay muted loop></video>
     </div>
     <div class=" products product1">
         <div>
-            <img class="products_images product_image1" src="images/bracelets1.jpg">
+            <img class="products_images product_image1" src="../images/bracelets1.jpg">
             <h3 class="products_name product_name1">Bullet Brown Diamond Bangle</h3>
         </div>
         <div class="products_description product_description1">
@@ -58,8 +58,8 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price1">$1500</span><img
-                    class="icons icon_fav" src="./images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
-                    src="./images/bag.png" alt="shoppingbag"></div>
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    src="../images/bag.png" alt="shoppingbag"></div>
         </div>
     </div>
     <div class=" products product2">
@@ -75,18 +75,18 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price2">$1200</span><img
-                    class="icons icon_fav" src="./images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
-                    src="./images/bag.png" alt="shoppingbag"></div>
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    src="../images/bag.png" alt="shoppingbag"></div>
         </div>
         <div>
-            <img class="products_images product_image2" src="images/bracelets2.jpg">
+            <img class="products_images product_image2" src="../images/bracelets2.jpg">
             <h3 class="products_name product_name2">Eternal Diamond Bracelet</h3>
         </div>
 
     </div>
     <div class=" products product3">
         <div>
-            <img class="products_images product_image3" src="images/bracelets3.jpg">
+            <img class="products_images product_image3" src="../images/bracelets3.jpg">
             <h3 class="products_name product_name3">Eternal Diamond Chain Bracelet</h3>
         </div>
         <div class="products_description product_description3">
@@ -102,8 +102,8 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price3">$700</span><img
-                    class="icons icon_fav" src="./images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
-                    src="./images/bag.png" alt="shoppingbag"></div>
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    src="../images/bag.png" alt="shoppingbag"></div>
         </div>
     </div>
     <div class=" products product4">
@@ -118,18 +118,18 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price4">$800</span><img
-                    class="icons icon_fav" src="./images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
-                    src="./images/bag.png" alt="shoppingbag"></div>
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    src="../images/bag.png" alt="shoppingbag"></div>
         </div>
         <div>
-            <img class="products_images product_image4" src="images/bracelets4.jpg">
+            <img class="products_images product_image4" src="../images/bracelets4.jpg">
             <h3 class="products_name product_name4">Eternal Diamond Bracelet with Pear Diamond</h3>
         </div>
 
     </div>
     <div class=" products product5">
         <div>
-            <img class="products_images product_image5" src="images/bracelets5.png">
+            <img class="products_images product_image5" src="../images/bracelets5.png">
             <h3 class="products_name product_name5">Eternal Diamond Bracelet with Marquise Diamond</h3>
         </div>
         <div class="products_description product_description5">
@@ -145,8 +145,8 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price5">$1900</span><img
-                    class="icons icon_fav" src="./images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
-                    src="./images/bag.png" alt="shoppingbag"></div>
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    src="../images/bag.png" alt="shoppingbag"></div>
         </div>
     </div>
     <div class=" products product6">
@@ -163,11 +163,11 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price6">$1800</span><img
-                    class="icons icon_fav" src="./images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
-                    src="./images/bag.png" alt="shoppingbag"></div>
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    src="../images/bag.png" alt="shoppingbag"></div>
         </div>
         <div>
-            <img class="products_images product_image6" src="images/bracelets6.jpg">
+            <img class="products_images product_image6" src="../images/bracelets6.jpg">
             <h3 class="products_name product_name6">Eternal Diamond Bracelet with Ruby</h3>
         </div>
 
@@ -184,19 +184,19 @@
         <div class="socialmedia">
             <div>Connect With Us</div><br>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/insta.png" alt="insta"></div>
+                <div><img class="icons" src="../images/insta.png" alt="insta"></div>
                 <div class="socialmedia-name">Jewellery</div>
             </div>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/fb2.png" alt="fb"></div>
+                <div><img class="icons" src="../images/fb2.png" alt="fb"></div>
                 <div class="socialmedia-name">Jewellery</div>
             </div>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/mail.png" alt="mail"></div>
+                <div><img class="icons" src="../images/mail.png" alt="mail"></div>
                 <div class="socialmedia-name">jewellery@jewellery.com</div>
             </div>
             <div class="socialmedia-item">
-                <div><img class="icons" src="./images/telephone-62.png" alt="telephone"></div>
+                <div><img class="icons" src="../images/telephone-62.png" alt="telephone"></div>
                 <div class="socialmedia-name">+961 3 123456</div>
             </div>
 
@@ -210,11 +210,11 @@
                 </form>
             </div>
             <div class="space"></div>
-            <div><img style="height: 40px; width: auto;" src="./images/payment.png" alt="payment"></div>
+            <div><img style="height: 40px; width: auto;" src="../images/payment.png" alt="payment"></div>
 
         </div>
 
         </div>
     </footer>
-    <script src="bracelets.js"></script>
+    <script src="../javaScript/bracelets.js"></script>
 </body>
