--- a/frontend/signup-menu.html
+++ b/frontend/signup-menu.html
@@ -122,5 +122,5 @@
 
         </div>
     </footer>
-    <script src="javaScript/signup-javascript.js"></script>
+    <script src="../javaScript/signup-javascript.js"></script>
 </body>
