--- a/frontend/cartbag.html
+++ b/frontend/cartbag.html
@@ -43,7 +43,14 @@
     
 
         <footer class="footer">
-            <div class="slogan">Slogan</div>
+            <div class="slogan">JEWELLERY
+                <pre>               
+            Unleash your inner radiance: 
+            Shop our stunning jewellery pieces now.       
+          
+            Adorn yourself with timeless elegance:
+            Explore our exquisite jewellery collection
+                      today.</pre></div>
             <div class="socialmedia">
                 <div>Connect With Us</div><br>
                 <div class="socialmedia-item">
