added login button ,fixed nav bar issues

--- a/frontend/earrings.html
+++ b/frontend/earrings.html
@@ -33,6 +33,7 @@
             <div class="nav-item" onclick="window.location.href = 'earrings.html';">Earrings</div>
             <div class="nav-item" onclick="window.location.href = 'bracelets.html';">BRACELETS</div>
             <div class="nav-item" onclick="window.location.href = 'about-us.html';">About Us</div>
+            <div class="nav-item" onclick="window.location.href = 'login-menu.html';">login</div>
         </div>
     
 
