--- a/frontend/cartbag.html
+++ b/frontend/cartbag.html
@@ -27,12 +27,13 @@
         </div>
         </header>
         <div class="nav-bar">
-            <div class="nav-item">Home</div>
-            <div class="nav-item">Necklaces</div>
-            <div class="nav-item">Rings</div>
-            <div class="nav-item">Earrings</div>
-            <div class="nav-item">BRACELETS</div>
-            <div class="nav-item">About Us</div>
+            <div class="nav-item" onclick="window.location.href = 'main.html';">Home</div>
+            <div class="nav-item" onclick="window.location.href = 'necklaces.html';">Necklaces</div>
+            <div class="nav-item" onclick="window.location.href = 'ring.html';">Rings</div>
+            <div class="nav-item" onclick="window.location.href = 'earrings.html';">Earrings</div>
+            <div class="nav-item" onclick="window.location.href = 'bracelets.html';">BRACELETS</div>
+            <div class="nav-item" onclick="window.location.href = 'about-us.html';">About Us</div>
+            <div class="nav-item" onclick="window.location.href = 'login-menu.html';">login</div>
         </div>
         <h1 class="cart_title">SHOPPING CART</h1>
         <div class="cart_items">
