--- a/frontend/main.html
+++ b/frontend/main.html
@@ -50,10 +50,10 @@
 
             <div class="shop-by-cat-title">Shop By Category</div>
             <div class="categories">
-                <div><img class="img-cat" src="../images/cat-neck.jpg" alt="necklace"></div>
-                <div><img class="img-cat" src="../images/cat-brace.jpg" alt="bracelet"></div>
-                <div><img class="img-cat" src="../images/cat-ear.jpg" alt="earrings"></div>
-                <div><img class="img-cat" src="../images/cat-ring.jpg" alt="ring"></div>
+                <div><img class="img-cat" src="../images/cat-neck.jpg" alt="necklace" onclick="window.location.href = 'necklaces.html'" ></div>
+                <div><img class="img-cat" src="../images/cat-brace.jpg" alt="bracelet" onclick="window.location.href = 'bracelets.html';"></div>
+                <div><img class="img-cat" src="../images/cat-ear.jpg" alt="earrings" onclick="window.location.href = 'earrings.html';"></div>
+                <div><img class="img-cat" src="../images/cat-ring.jpg" alt="ring" onclick="window.location.href = 'ring.html';"></div>
             </div>
             <div id="quote"></div>
             <div class="photo-and-desc">
