fixed pic directory

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -115,7 +115,7 @@
                     <div><p class="review">""I highly recommend this jewelry brand. The unique designs and high-quality materials make for truly special pieces. I always feel like a million bucks when I wear their jewelry!""</p></div>
                 </div>
                 <div class="feedback-box">
-                    <div><img class="quotations" src="./images/quotations2.png" alt="quot"></div>
+                    <div><img class="quotations" src="../images/quotations2.png" alt="quot"></div>
                     <div><p class="review">""The attention to detail is impeccable. The intricacy of the design and the high-quality stones used really make this piece stand out. I feel like I'm wearing a piece of art!""</p></div>
                 </div>
                 
