--- a/frontend/login-menu.html
+++ b/frontend/login-menu.html
@@ -9,7 +9,7 @@
     
 
     <title>E-Commerce Team Project</title>
-
+</head>
 <body>
     <header class="header">
         <div class="title">
@@ -122,3 +122,4 @@
     </footer>
     <script src="../javaScript/login-javascript.js"></script>
 </body>
+</html>
