--- a/frontend/earrings.html
+++ b/frontend/earrings.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
 
     <title>E-Commerce Team Project</title>
-
+</head>
 <body>
     <header class="header">
         <div class="title">
@@ -213,3 +213,5 @@
     </footer>
     <script src="javaScript/cartbag.js"></script>
 </body>
+
+</html>
