--- a/frontend/main.html
+++ b/frontend/main.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
 
     <title>E-Commerce Team Project</title>
-
+</head>
 <body>
     <header class="header">
         <div class="title">
@@ -172,3 +172,4 @@
         </div>
     </footer>
 </body>
+</html>
