--- a/frontend/signup-menu.html
+++ b/frontend/signup-menu.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
 
     <title>E-Commerce Team Project</title>
-
+</head>
 <body>
     <header class="header">
         <div class="title">
@@ -133,3 +133,4 @@
     </footer>
     <script src="../javaScript/signup-javascript.js"></script>
 </body>
+</html>
