--- a/frontend/admin-panel.html
+++ b/frontend/admin-panel.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Admin Panel</title>
 	<link rel="stylesheet" type="text/css" href="../styles/admin-panel.css">
-    <link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
 </head>
+
 <body>
 	<header>Admin Panel</header>
-	
-	<div class="nav-bar">
-		<div id="show-div-btn" class="nav-item"  onclick="window.location.href = '../frontend/admin-view-users.html';">Display Users</div>
-		<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Display Products</div>
-		<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Edit Products</div>
-		<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Add Products</div>
-		<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Remove Products</div>
+	<div class="container">
+		<div class="nav-bar">
+			<div  class="nav-item" onclick="window.location.href = '../frontend/admin-view-users.html';">Display Users</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Display Products</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Edit Products</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Add Products</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Remove Products</div>
 
+		</div>
+		<div>
+			
+		</div>
 	</div>
-	
-
-		
+	<script src="admin-panel.js"></script>
