added add product page

--- a/frontend/admin-panel.html
+++ b/frontend/admin-panel.html
@@ -13,9 +13,8 @@
 	<div class="container">
 		<div class="nav-bar">
 			<div  class="nav-item" onclick="window.location.href = '../frontend/admin-view-users.html';">Display Users</div>
-			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Display Products</div>
 			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Edit Products</div>
-			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Add Products</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/admin-add-product.html';">Add Products</div>
 			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Remove Products</div>
 
 		</div>
