--- a/frontend/admin-add-product.html
+++ b/frontend/admin-add-product.html
@@ -20,17 +20,17 @@
                 
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name">
+                    <input id="name" type="text" id="name" name="name">
                 </div>
 
                 <div class="form-group">
                     <label for="price">Price:</label>
-                    <input type="number" id="price" name="price" min="0" step="0.01">
+                    <input id="price" type="number" id="price" name="price" min="0" step="0.01">
                 </div>
 
                 <div class="form-group">
                     <label for="quantity">Quantity:</label>
-                    <input type="number" id="quantity" name="quantity" min="0">
+                    <input id="quantity" type="number" id="quantity" name="quantity" min="0">
                 </div>
 
                 <div class="form-group">
@@ -39,11 +39,11 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="Submit">
+                    <input id="submit-button" type="button" value="Submit">
                 </div>
             </form>
 
-            <div><button id="my-button">view</button></div>
+            <div><button id="my-button">View Products</button></div>
 
         </div>
 
@@ -66,7 +66,7 @@
 
     </div>
 
-    <script src="../javaScript/admin-view-users.js"></script>
+    <script src="../javaScript/add-product.js"></script>
 </body>
 
 </html>
