--- a/frontend/admin-add-product.html
+++ b/frontend/admin-add-product.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input id="submit-button" type="button" value="Submit">
+                    <input id="submit-button"class="submit-btn" type="button" value="Submit">
                 </div>
             </form>
 
