added admin login page js and API

--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -54,7 +54,6 @@
 
     </div>
 
-    <script src="../javaScript/add-product.js"></script>
-</body>
+    <script src="../javaScript/admin-login.js"></script></body>
 
 </html>
