added data-product to items

--- a/frontend/necklaces.html
+++ b/frontend/necklaces.html
@@ -61,7 +61,7 @@
     
                   <div class="products_price_fav_cart"><span class="products_prices product_price1">$150</span>
                     <img class="icons icon_fav" src="../images/heart.jpg" alt="wishlist" data-product='{"id": 1, "name": "Necklace with Colored Beads", "description": "Gold Weight: 1.1 g", "price": 150, "quantity": 5}' >
-                    <img class="icons icon_cart" src="../images/bag.png" alt="shoppingbag" data-product='{"id": 1, "name": "Necklace with Colored Beads", "description": "Gold Weight: 1.1 g", "price": 150, "quantity": 5}'></div>
+                    <img class="icons icon_cart" src="../images/bag.png" alt="shoppingbag" ></div>
                 </div>
         </div>
 
