added data-products to item

--- a/frontend/bracelets.html
+++ b/frontend/bracelets.html
@@ -77,7 +77,7 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price2">$1200</span><img
-                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist" data-product='{"id": 23, "name": "goose", "description": "Gold Weight: 8 g", "price":2800, "quantity": 5}'><img class="icons icon_cart"
                     src="../images/bag.png" alt="shoppingbag"></div>
         </div>
         <div>
@@ -104,7 +104,7 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price3">$700</span><img
-                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist" data-product='{"id": 19, "name": "goose", "description": "Gold Weight: 8 g", "price":2800, "quantity": 5}'><img class="icons icon_cart"
                     src="../images/bag.png" alt="shoppingbag"></div>
         </div>
     </div>
@@ -120,7 +120,7 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price4">$800</span><img
-                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist" data-product='{"id": 20, "name": "goose", "description": "Gold Weight: 8 g", "price":2800, "quantity": 5}'><img class="icons icon_cart"
                     src="../images/bag.png" alt="shoppingbag"></div>
         </div>
         <div>
@@ -147,7 +147,7 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price5">$1900</span><img
-                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist" data-product='{"id": 21, "name": "goose", "description": "Gold Weight: 8 g", "price":2800, "quantity": 5}'><img class="icons icon_cart"
                     src="../images/bag.png" alt="shoppingbag"></div>
         </div>
     </div>
@@ -165,7 +165,7 @@
             </ul>
 
             <div class="products_price_fav_cart"><span class="products_prices product_price6">$1800</span><img
-                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist"><img class="icons icon_cart"
+                    class="icons icon_fav" src="../images/heart.jpg" alt="wishlist" data-product='{"id": 22, "name": "goose", "description": "Gold Weight: 8 g", "price":2800, "quantity": 5}'><img class="icons icon_cart"
                     src="../images/bag.png" alt="shoppingbag"></div>
         </div>
         <div>
