add to cart function

--- a/frontend/cartbag.html
+++ b/frontend/cartbag.html
@@ -95,7 +95,8 @@
     
             </div>
         </footer>
-        <script src="javaScript/cartbag.js"></script>
+       
+        <script src="../javaScript/favorites.js"></script>
     </body>
 
 </html>
