--- a/frontend/ring.html
+++ b/frontend/ring.html
@@ -174,7 +174,7 @@
                                 </div> 
                          
                                 </div>   
-                                <script src="../javaScript/favorites.js"></script>                  
+                                <script src="../javaScript/get-item.js"></script>                  
     </div>
     
  
