--- a/frontend/necklaces.html
+++ b/frontend/necklaces.html
@@ -187,7 +187,7 @@
                                 </div> 
                          
             </div>   
-        <script src="../javaScript/favorites.js"></script>                
+        <script src="../javaScript/get-item.js"></script>                
     </div>
     
  
