--- a/frontend/main.html
+++ b/frontend/main.html
@@ -12,6 +12,7 @@
 
 <body>
     <header class="header">
+        
         <div class="title">
             <div class="logo-div">
                 <img class="logo" src="../images/logo.png" alt="Logo">
@@ -139,6 +140,9 @@
                 </div>
 
             </div>
+            <!-- <div class="logout"><a>Logout</a></div> -->
+            <div><p><a style="text-decoration: none;" href="../frontend/login-menu.html"><u><b>Logout</b></u></a></p></div>
+
 
         </div>
 
