edited footer in all pages

--- a/frontend/login-menu.html
+++ b/frontend/login-menu.html
@@ -83,14 +83,13 @@
 
     </div>
     <footer class="footer">
-        <div class="slogan">JEWELLERY
-            <pre>               
-        Unleash your inner radiance: 
-        Shop our stunning jewellery pieces now.       
-      
-        Adorn yourself with timeless elegance:
-        Explore our exquisite jewellery collection
-                  today.</pre></div>
+        <div class="slogan">
+            <div><img class="logo" src="../images/logo.png" alt="Logo"></div><br>
+            <div><b>Jewellery</b></div><br>
+            <div style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Unleash your inner radiance:</div>
+             <div style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Shop our stunning jewellery pieces now.</div>
+
+        </div>
         <div class="socialmedia">
             <div>Connect With Us</div><br>
             <div class="socialmedia-item">
