added wishlist and navigations

--- a/frontend/about-us.html
+++ b/frontend/about-us.html
@@ -22,7 +22,7 @@
         <div class="header-icons">
             <img class="icons" src="../images/search.png" alt="search" onclick="window.location.href = 'search.html';">
             <img class="icons" src="../images/user.png" alt="userprofile" onclick="window.location.href = 'edit-profile.html';">
-            <img class="icons" src="../images/heart.jpg" alt="wishlist">
+            <img class="icons" src="../images/heart.jpg" alt="wishlist" onclick="window.location.href = 'wishlist.html';">
             <img class="icons" src="../images/bag.png" alt="shoppingbag" onclick="window.location.href = 'cartbag.html';">
 
         </div>
