--- a/frontend/wishlist.html
+++ b/frontend/wishlist.html
@@ -37,11 +37,11 @@
             <div class="nav-item" onclick="window.location.href = 'login-menu.html';">login</div>
         </div>
 
-        <h1 class="cart_title">SHOPPING CART</h1>
-        <p class="total_price">Total=<span id="total">0</span>$</p>
+        <h1 class="cart_title">Wish List</h1>
+        <!-- <p class="total_price">Total=<span id="total">0</span>$</p> -->
         <div class="cart_items" id="cart">
             
-            <p class="empty_cart">Your cart is empty.</p>
+            <p class="empty_cart">Your wishlist is empty.</p>
             <button type="button" class="browse_button" onclick="window.location.href = 'main.html';">Browse Store</button>
 
         </div>
