--- a/frontend/admin-view-users.html
+++ b/frontend/admin-view-users.html
@@ -14,7 +14,10 @@
         <div class="nav-bar">
             <div class="nav-item">Display Users</div>
         </div>
+
         <div><button id="my-button">view</button></div>
+        <input class="submit-btn" type="button" value="Back" onclick="window.location.href = 'admin-panel.html';">
+        <input class="submit-btn" type="button" value="Logout" onclick="window.location.href = 'login-menu.html';">
         <div>
             <table id="users-table">
                 <thead>
