--- a/frontend/admin-add-product.html
+++ b/frontend/admin-add-product.html
@@ -40,6 +40,8 @@
 
                 <div class="form-group">
                     <input id="submit-button"class="submit-btn" type="button" value="Submit">
+                    <input class="submit-btn" type="button" value="Back" onclick="window.location.href = 'admin-panel.html';">
+                    <input class="submit-btn" type="button" value="Logout" onclick="window.location.href = 'login-menu.html';">
                 </div>
             </form>
 
