--- a/frontend/admin-panel.html
+++ b/frontend/admin-panel.html
@@ -12,14 +12,19 @@
 	<header>Admin Panel</header>
 	<div class="container">
 		<div class="nav-bar">
-			<div  class="nav-item" onclick="window.location.href = '../frontend/admin-view-users.html';">Display Users</div>
-			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Edit Products</div>
-			<div class="nav-item" onclick="window.location.href = '../frontend/admin-add-product.html';">Add Products</div>
-			<div class="nav-item" onclick="window.location.href = '../frontend/main.html';">Remove Products</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/admin-view-users.html';">Display Users
+			</div>
+			<div class="nav-item">Edit Products</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/admin-add-product.html';">Add Products
+			</div>
+			<div class="nav-item" onclick="window.location.href = '../frontend/admin-remove-product.html';">Remove
+				Products</div>
 
 		</div>
+
+		<input class="submit-btn" type="button" value="Logout" onclick="window.location.href = 'login-menu.html';">
 		<div>
-			
+
 		</div>
 	</div>
 	<script src="admin-panel.js"></script>
