--- a/frontend/admin-remove-product.html
+++ b/frontend/admin-remove-product.html
@@ -23,6 +23,8 @@
                 </div>
                 <div class="form-group">
                     <button class="submit-btn" type="submit" id="delete-button">Delete</button>
+                    <input class="submit-btn" type="button" value="Back" onclick="window.location.href = 'admin-panel.html';">
+                    <input class="submit-btn" type="button" value="Logout" onclick="window.location.href = 'login-menu.html';">
                 </div>
             </form>
 
